--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=microservicio-zuul
+server.port=8090
 
+#Configuracion are ver donde esta el server de eureka
+eureka.client.service-url.defaultZone=http://127.0.0.1:8761/eureka
+
+#Enrutar microservicios
+zuul.routes.usuarios.service-id=microservicio-usuarios
+zuul.routes.usuarios.path=/api/alumnos/**
